Make the ball jump the first obstacle correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -272,10 +272,12 @@ header p {
   width: 25px;
   height: 25px;
   top: 90px;
-  right: 70px;
+  right: 50px;
   background-color: rgb(255, 0, 50);
   border-radius: 50%;
   z-index: 2;
+  animation: ball-jump 5s linear infinite;
+  animation-delay: 3.8s;
 }
 
 .card-bounce .obstacle {
@@ -296,11 +298,11 @@ header p {
   border: 1px solid black;
 }
 
-.card-bounce #ball:hover {
+/* .card-bounce #ball:hover {
   background-color: orangered;
   transition: 4s;
-  animation: ball-jump 4s linear infinite;
-}
+  animation: ball-jump 6s linear infinite;
+} */
 
 .card-bounce #obstacle1 {
   animation-delay: 2s;
@@ -495,10 +497,10 @@ header p {
   100% {
     transform: translateY(0);
   }
-  12% {
+  5% {
     transform: translateY(-60px);
   }
-  37% {
+  10% {
     transform: translateY(-60px);
   }
 }
